--- a/css/main.css
+++ b/css/main.css
@@ -278,6 +278,8 @@ input::placeholder {
 
 .v3_1 {
   width: 100%;
+  height: 100vh;
+  padding: 10px;
   display: grid;
   background-color: rgb(244, 245, 246, 1);
   grid-template-columns: 310px 1fr;
@@ -287,7 +289,6 @@ input::placeholder {
   display: flex;
   background-color: rgba(255, 255, 255, 1);
   flex-direction: column;
-  margin: 10px;
 }
 .v3_2 img {
   width: 100%;
@@ -305,7 +306,7 @@ input::placeholder {
   width: 100%;
   height: 100px;
   background-color: rgba(255, 255, 255, 1);
-  margin-top: 10px;
+  margin-left: 10px;
 }
 .v3_6 {
 }
