--- a/css/main.css
+++ b/css/main.css
@@ -281,22 +281,29 @@ input::placeholder {
   height: 100vh;
   padding: 10px;
   display: grid;
-  background-color: rgb(244, 245, 246, 1);
+  background-color: rgb(135, 173, 210);
   grid-template-columns: 310px 1fr;
 }
 .v3_2 {
   height: 675px;
   display: flex;
   background-color: rgba(255, 255, 255, 1);
+  border-radius: 6px;
   flex-direction: column;
 }
 .v3_2 img {
-  width: 100%;
-  margin: 20px 0;
+  width: 300px;
+  margin: 20px 5px;
+  box-shadow: -5px -5px 10px rgb(9, 106, 46, 0.5);
 }
 .v3_3 {
-  margin: 30px auto;
+  width: 250px;
+  margin: 10px auto;
+  padding: 10px 0 10px 0;
+  text-align: center;
   font-size: 20px;
+  border-radius: 6px;
+  background-color: rgb(69, 169, 234);
 }
 .v3_4 {
   display: flex;
@@ -305,8 +312,47 @@ input::placeholder {
 .v3_5 {
   width: 100%;
   height: 100px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  border-radius: 6px;
   background-color: rgba(255, 255, 255, 1);
-  margin-left: 10px;
+  margin: 0 10px;
 }
 .v3_6 {
+  height: 100px;
+  padding: 30px 0 0 20px;
+  font-size: 40px;
+  font-family: "Times New Roman", Times, serif;
+  font-weight: bold;
+}
+.v3_7 {
+  display: flex;
+  flex-direction: row;
+}
+.v3_7 img {
+  margin-top: 30px;
+  margin-bottom: 30px;
+  width: 40px;
+}
+.v3_8 {
+  display: flex;
+  padding-left: 10px;
+  padding-right: 20px;
+  flex-direction: column;
+}
+.v3_9 {
+  margin-top: 30px;
+  font-size: 20px;
+}
+.v3_10 {
+  margin-top: 2px;
+  font-size: 10px;
+}
+.v3_11 {
+  width: 100%;
+  height: 100%;
+  border-radius: 6px;
+  background-color: rgba(255, 255, 255, 1);
+  margin: 10px 10px 0 10px;
 }
