--- a/css/main.css
+++ b/css/main.css
@@ -282,13 +282,14 @@ input::placeholder {
   padding: 10px;
   display: grid;
   background-color: rgb(135, 173, 210);
-  grid-template-columns: 310px 1fr;
+  grid-template-columns: 320px 1fr;
 }
 .v3_2 {
   height: 675px;
   display: flex;
   background-color: rgba(255, 255, 255, 1);
   border-radius: 6px;
+  margin-right: 10px;
   flex-direction: column;
 }
 .v3_2 img {
@@ -303,7 +304,6 @@ input::placeholder {
   text-align: center;
   font-size: 20px;
   border-radius: 6px;
-  background-color: rgb(69, 169, 234);
 }
 .v3_4 {
   display: flex;
@@ -317,7 +317,6 @@ input::placeholder {
   justify-content: space-between;
   border-radius: 6px;
   background-color: rgba(255, 255, 255, 1);
-  margin: 0 10px;
 }
 .v3_6 {
   height: 100px;
@@ -354,5 +353,5 @@ input::placeholder {
   height: 100%;
   border-radius: 6px;
   background-color: rgba(255, 255, 255, 1);
-  margin: 10px 10px 0 10px;
+  margin-top: 10px;
 }
