--- a/css/main.css
+++ b/css/main.css
@@ -473,10 +473,16 @@ input::placeholder {
   padding-top: 11px;
   font-size: 16px;
 }
-
-.child-div {
-  width: 400px; /* Cố tình cho thẻ con lớn hơn thẻ cha */
-  height: 250px;
-  background-color: lightblue;
-  margin-bottom: 10px;
+.v3_11::-webkit-scrollbar {
+  width: 0;
+}
+.services_1 {
+  width: 190px;
+  height: 200px;
+  overflow: auto;
+  background-color: rgba(255, 255, 255, 1);
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  border-radius: 6px;
 }
