--- a/css/main.css
+++ b/css/main.css
@@ -486,3 +486,13 @@ input::placeholder {
   text-align: center;
   border-radius: 6px;
 }
+table {
+  width: 100%;
+  padding: 5px 0;
+  background-color: antiquewhite;
+}
+table,
+tr,
+th {
+  border-bottom: 1px solid black;
+}
