--- a/css/main.css
+++ b/css/main.css
@@ -496,3 +496,23 @@ tr,
 th {
   border-bottom: 1px solid black;
 }
+.services_form_1 {
+  background-color: rgba(255, 255, 255, 1);
+  border-radius: 6px;
+  width: 100%;
+  height: 50px;
+  display: grid;
+  grid-template-columns: 50px 1fr;
+}
+.services_form_1_1 {
+  width: 50px;
+  margin: auto 0;
+  text-align: center;
+  font-size: 20px;
+}
+
+.services_form_1_2 {
+  margin: auto 0 auto 0;
+  text-align: center;
+  font-size: 20px;
+}
