--- a/css/main.css
+++ b/css/main.css
@@ -321,6 +321,9 @@ input::placeholder {
   font-size: 20px;
   border-radius: 6px;
 }
+.v3_3:hover {
+  background-color: rgba(200, 200, 200, 0.3);
+}
 .v3_4 {
   display: flex;
   flex-direction: column;
@@ -486,15 +489,27 @@ input::placeholder {
   text-align: center;
   border-radius: 6px;
 }
+.services_1:hover {
+  background-color: rgba(200, 240, 200, 1);
+}
 table {
   width: 100%;
-  padding: 5px 0;
-  background-color: antiquewhite;
+  text-align: left;
+  background-color: rgba(255, 255, 255, 1);
+  border-radius: 6px 6px 0 0;
 }
 table,
-tr,
-th {
+th,
+td {
   border-bottom: 1px solid black;
+  border-collapse: collapse;
+}
+td,
+th {
+  padding: 10px;
+}
+.table tbody tr:hover {
+  background-color: rgb(233, 249, 175);
 }
 .services_form_1 {
   background-color: rgba(255, 255, 255, 1);
@@ -505,12 +520,13 @@ th {
   grid-template-columns: 50px 1fr;
 }
 .services_form_1_1 {
-  width: 50px;
-  margin: auto 0;
+  border-radius: 6px 0 0 6px;
   text-align: center;
-  font-size: 20px;
+  font-size: 40px;
 }
-
+.services_form_1_1:hover {
+  background-color: rgba(200, 200, 200, 0.3);
+}
 .services_form_1_2 {
   margin: auto 0 auto 0;
   text-align: center;
