--- a/css/main.css
+++ b/css/main.css
@@ -167,6 +167,7 @@ input::placeholder {
   opacity: 1;
   text-align: center;
   text-decoration: none;
+  cursor: pointer;
 }
 
 .v2_0 {
@@ -288,298 +289,4 @@ input::placeholder {
   opacity: 1;
   text-align: center;
   text-decoration: none;
-}
-
-.v3_1 {
-  width: 100%;
-  height: 100vh;
-  padding: 10px;
-  display: grid;
-  background-color: rgb(157, 195, 171);
-  grid-template-columns: 320px 1fr;
-  -webkit-user-select: none;
-}
-.v3_2 {
-  height: 100%;
-  display: flex;
-  background-color: rgba(255, 255, 255, 1);
-  border-radius: 6px;
-  margin-right: 10px;
-  flex-direction: column;
-  -webkit-user-select: none;
-}
-.v3_2 img {
-  width: 300px;
-  margin: 20px 5px;
-  box-shadow: -5px -5px 10px rgb(9, 106, 46, 0.5);
-}
-.v3_3 {
-  width: 250px;
-  margin: 10px auto;
-  padding: 10px 0 10px 0;
-  text-align: center;
-  font-size: 20px;
-  border-radius: 6px;
-}
-.v3_3:hover {
-  background-color: rgba(200, 200, 200, 0.3);
-}
-.v3_4 {
-  display: flex;
-  flex-direction: column;
-}
-.v3_5 {
-  width: 100%;
-  height: 100px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  border-radius: 6px;
-  background-color: rgba(255, 255, 255, 1);
-}
-.v3_6 {
-  height: 100px;
-  padding: 30px 0 0 20px;
-  font-size: 40px;
-  font-family: "Times New Roman", Times, serif;
-  font-weight: bold;
-  -webkit-user-select: none;
-}
-.v3_7 {
-  display: flex;
-  flex-direction: row;
-  -webkit-user-select: none;
-}
-.v3_7 img {
-  margin-top: 30px;
-  margin-bottom: 30px;
-  width: 40px;
-}
-.v3_8 {
-  display: flex;
-  padding-left: 10px;
-  padding-right: 20px;
-  flex-direction: column;
-}
-.v3_9 {
-  margin-top: 30px;
-  font-size: 20px;
-}
-.v3_10 {
-  margin-top: 2px;
-  font-size: 10px;
-}
-.v3_11 {
-  width: 100%;
-  height: 100%;
-  margin-top: 10px;
-}
-.news_1 {
-  width: 100%;
-  height: 100%;
-  display: grid;
-  grid-template-rows: 40px 3px auto;
-}
-.news_1_1 {
-  background-color: rgba(255, 255, 255, 1);
-  border-top-left-radius: 6px;
-  border-top-right-radius: 6px;
-  display: flex;
-}
-.news_1_1_1 {
-  margin: 10px;
-  font-size: 20px;
-  font-weight: bolder;
-  color: rgba(151, 151, 151, 1);
-  -webkit-user-select: none;
-}
-.news_1_2 {
-  width: 100%;
-  height: 10px;
-  overflow: auto;
-  background-color: rgba(255, 255, 255, 1);
-  padding: 0 10%;
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-}
-.news_1_2::-webkit-scrollbar {
-  width: 0;
-}
-.news_1_2_1 {
-  width: 100%;
-  height: 800px;
-  background-color: rgb(240, 242, 245);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-.news_1_2_1_2 {
-  width: 100%;
-  height: 500px;
-  text-align: center;
-}
-.news_1_2_1_2 img {
-  max-width: 100%;
-  max-height: 500px;
-}
-.news_2 {
-  width: 100%;
-  height: 100%;
-  display: grid;
-  grid-template-rows: 100px 3px auto;
-}
-.news_2_1 {
-  background-color: rgba(245, 245, 245, 1);
-  border-radius: 6px;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-}
-.news_2_1_1 {
-  display: grid;
-  grid-template-rows: 5fr 3fr;
-}
-.news_2_1_1 img {
-  width: 70%;
-  margin: auto auto 0 auto;
-}
-.news_2_1_1 span {
-  text-align: center;
-  font-weight: bold;
-  font-size: 18px;
-  color: black;
-}
-.news_2_2 {
-  background-color: rgba(255, 255, 255, 1);
-  border-radius: 6px;
-}
-.news_2_2_1 {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-.news_2_2_1 div {
-  margin-left: 10px;
-  margin-top: 5px;
-  font-size: 20px;
-}
-.news_2_2_1 img {
-  width: 30px;
-}
-.news_2_2_2_1 {
-  width: 90%;
-  height: 40px;
-  margin: 5px auto 0 auto;
-  background-color: blanchedalmond;
-  border-radius: 6px;
-  padding-left: 10px;
-  padding-top: 11px;
-  font-size: 16px;
-}
-.v3_11::-webkit-scrollbar {
-  width: 0;
-}
-.services_1 {
-  width: 190px;
-  height: 200px;
-  overflow: auto;
-  background-color: rgba(255, 255, 255, 1);
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  border-radius: 6px;
-}
-.services_1:hover {
-  background-color: rgba(200, 240, 200, 1);
-}
-table {
-  width: 100%;
-  text-align: left;
-  background-color: rgba(255, 255, 255, 1);
-  border-radius: 6px 6px 0 0;
-}
-table,
-th,
-td {
-  border-bottom: 1px solid black;
-  border-collapse: collapse;
-}
-td,
-th {
-  padding: 10px;
-}
-.table tbody tr:hover {
-  background-color: rgb(233, 249, 175);
-}
-.services_form_1 {
-  background-color: rgba(255, 255, 255, 1);
-  border-radius: 6px;
-  width: 100%;
-  height: 50px;
-  display: grid;
-  grid-template-columns: 50px 1fr;
-}
-.services_form_1_1 {
-  border-radius: 6px 0 0 6px;
-  text-align: center;
-  font-size: 40px;
-}
-.services_form_1_1:hover {
-  background-color: rgba(200, 200, 200, 0.3);
-}
-.services_form_1_2 {
-  margin: auto 0 auto 0;
-  text-align: center;
-  font-size: 20px;
-}
-
-/* css for tooltip  */
-
-/* Basic link styling */
-.tooltip {
-    position: relative;
-}
-
-/* Tooltip text container */
-.tooltip::after {
-    content: attr(data-tooltip);
-    position: absolute;
-    top: 90%; /* Position above the link */
-    left: 5%;
-    transform: translateX(-50%);
-    background-color: #8d77b1;
-    color: #141313;
-    padding: 10px;
-    border-radius: 5px;
-    width: max-content;
-    max-width: 200px;
-    text-align: center;
-    white-space: normal;
-    font-size: 15px;
-    line-height: 1.4;
-    z-index: 1;
-    opacity: 0;
-    pointer-events: none;
-    transition: opacity 0.3s;
-}
-
-/* Tooltip arrow */
-.tooltip::before {
-    content: '';
-    position: absolute;
-    bottom: 100%;
-    left: 50%;
-    transform: translateX(-50%);
-    border-width: 5px;
-    border-style: solid;
-    border-color: transparent transparent #333 transparent;
-    z-index: 1;
-    opacity: 0;
-    transition: opacity 0.3s;
-}
-
-/* Show tooltip when hovered */
-.tooltip:hover::after,
-.tooltip:hover::before {
-    opacity: 1;
 }
