--- a/css/infor.css
+++ b/css/infor.css
@@ -15,7 +15,7 @@ body {
 }
 
 /* Container for Profile Card */
-.container {
+.container-info {
     display: flex;
     justify-content: center;
     align-items: center;
