--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,8 @@ body {
   display: flex;
   justify-content: center;
   overflow: hidden;
+  animation: slide-in 0.8s ease-out;
+
 }
 .v1_2 {
   width: 744px;
@@ -24,12 +26,50 @@ body {
   border-radius: 10px;
   overflow: hidden;
 }
-.v1_3 {
-  width: 500px;
-  opacity: 1;
-  margin: 50px auto 0 auto;
+
+/* Hiệu ứng lật cho logo */
+
+.flip-container {
+  perspective: 1000px; /* Tạo độ sâu 3D */
+  width: 100%;
+  height: 100px;
+}
+.flipper {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transition: transform 0.5s; /* Thời gian chuyển đổi 0.5 giây */
+  transform-style: preserve-3d; /* Bảo quản hiệu ứng 3D */
+}
+.flip-container:hover .flipper {
+  transform: rotateY(180deg); /* Lật theo trục Y */
+}
+
+.front, .back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden; /* Ẩn mặt sau khi lật */
+}
+
+.front {
   overflow: hidden;
-  box-shadow: -5px -5px 10px rgb(9, 106, 46, 0.5);
+  box-shadow: -5px -5px 10px rgb(9, 106, 46, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 1;
+}
+.front img {
+  max-width: 100%;
+}
+.back {
+  transform: rotateY(180deg);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  font-family: Courier New;
 }
 .v1_4,
 .v1_5,
@@ -169,6 +209,9 @@ input::placeholder {
   text-decoration: none;
   cursor: pointer;
 }
+.v1_16:hover {
+  background-color: blueviolet;
+}
 
 .v2_0 {
   width: 744px;
@@ -289,4 +332,15 @@ input::placeholder {
   opacity: 1;
   text-align: center;
   text-decoration: none;
+}
+
+@keyframes slide-in {
+  from {
+      transform: translateY(-50px);
+      opacity: 0;
+  }
+  to {
+      transform: translateY(0);
+      opacity: 1;
+  }
 }
