--- a/css/infor.css
+++ b/css/infor.css
@@ -54,6 +54,8 @@
 /* Buttons */
 .btn-container {
   margin-top: 45px;
+  display: grid;
+  grid-template-columns: 50% 50%;
 }
 
 .btn {
@@ -65,6 +67,7 @@
   border-radius: 25px;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  width: 90%;
 }
 
 .btn:hover {
