--- a/css/infor.css
+++ b/css/infor.css
@@ -25,7 +25,8 @@
   animation: slide-in 0.5s ease-out;
   position: fixed;
   top: 100px;
-  left: 170px;
+  left: -350px;
+  display: none;
 }
 
 /* Profile Image */
@@ -42,7 +43,9 @@
   font-size: 1.8rem;
   margin-bottom: 10px;
 }
-
+.profile-info {
+  height: 113.6px;
+}
 .profile-info p {
   font-size: 1rem;
   color: #333;
@@ -53,7 +56,6 @@
 
 /* Buttons */
 .btn-container {
-  margin-top: 45px;
   display: grid;
   grid-template-columns: 50% 50%;
 }
