--- a/css/home.css
+++ b/css/home.css
@@ -111,7 +111,6 @@ body {
   width: 100%;
   height: 10px;
   overflow: auto;
-  background-color: rgba(255, 255, 255, 1);
   padding: 0 10%;
   display: flex;
   flex-direction: column;
@@ -124,16 +123,34 @@ body {
   width: 100%;
   height: 800px;
   background-color: rgb(240, 242, 245);
+  border-radius: 6px;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
+.news_1_2_1_1 {
+  width: 100%;
+  height: 40px;
+  display: flex;
+}
+.news_1_2_1_1 img {
+  border-radius: 50%;
+  height: 30px;
+  margin: 5px;
+}
+.news_1_2_1_1 div {
+  font-size: 20px;
+  margin: 10px 0;
+}
 .news_1_2_1_2 {
+  margin: 10px;
+}
+.news_1_2_1_3 {
   width: 100%;
   height: 500px;
   text-align: center;
 }
-.news_1_2_1_2 img {
+.news_1_2_1_3 img {
   max-width: 100%;
   max-height: 500px;
 }
